# Dynamic-Route-Optimizer

./: create_structure.ps1  pyproject.toml  run.sh
backend/: requirements.txt
backend/api/: main.py
backend/api/routes/: graph.py
backend/api/services/: optimizer.py
backend/models/: schema.py
cpp_engine/: CMakeLists.txt  main.cpp
cpp_engine/algorithms/: astar.cpp  dijkstra.cpp  floyd_warshall.cpp  union_find.cpp
cpp_engine/include/: algorithms.h  graph.h  graph_io.h  segment_tree.h  unionfind.h
cpp_engine/utils/: graph.cpp  graph_io.cpp  segment_tree.cpp
data/: config.json  sample_graph.json
docs/: README.md
visualizer/: api.js  app.js  index.html  style.css
